// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders if optional and required params are passed in 1`] = `
<div
  class="sc-bczRLJ hOHvzZ"
  data-testid="Input"
>
  <textarea
    class="sc-gsnTZi plSnX"
    placeholder=" "
  >
    test-value
  </textarea>
  <label
    class="sc-hKMtZM cWKlol"
  >
    TEST-LABEL
  </label>
</div>
`;

exports[`Input renders if required params and value are passed in 1`] = `
<div
  class="sc-bczRLJ hOHvzZ"
  data-testid="Input"
>
  <input
    class="sc-dkzDqf fCaQkv"
    placeholder=" "
    value="test-value"
  />
  <label
    class="sc-hKMtZM cWKlol"
  >
    TEST-LABEL
  </label>
</div>
`;
